                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Fandrich (10 Jul 2008)
- Changed slightly the SFTP quote commands chmod, chown and chgrp to only
  set the attribute that has changed instead of all possible ones. Hopefully,
  this will solve the "Permission denied" problem that Nagarajan Sreenivasan
  reported when setting some modes, but regardless, it saves a protocol
  round trip in the chmod case.

- Added test cases 1038 and 1039 to test Adrian Kreher's report that ftp
  uploads with -C - didn't resume properly, but the tests pass.

Yang Tse (10 Jul 2008)
- Peter Lamberg filed bug report #2015126: "poll gives WSAEINVAL when POLLPRI
  is set in fdset.events" (http://curl.haxx.se/bug/view.cgi?id=2015126) which
  exactly pinpointed the problem only triggered on Windows Vista, provided
  reference to docs and also a fix. There is much work behind Peter Lamberg's
  excellent bug report. Thank You!

Daniel Fandrich (9 Jul 2008)
- Added tests 1036 and 1037 to verify resumed ftp downloads with -C -

Daniel Stenberg (9 Jul 2008)
- Andreas Schuldei improved Phil Blundell's patch for IPv6 using c-ares, and I
  edited it slightly. Now you should be able to use IPv6 addresses fine even
  with libcurl built to use c-ares.

Daniel Fandrich (9 Jul 2008)
- Fixed an OOM handling problem that cause test 11 to fail the torture test.

Daniel Fandrich (8 Jul 2008)
- Fixed test 554 to pass the torture test.

Daniel Fandrich (7 Jul 2008)
- Added test cases 1034 & 1035 to test IDN name conversion failures.

Daniel Stenberg (7 Jul 2008)
- Scott Barrett provided a test case for a segfault in the FTP code and the
  fix for it. It occured when you did a FTP transfer using